# News-AI

./: .gitignore  GEMINI.md  README.md  app.py  pyproject.toml
LazyVim/: .env.example  .gitignore  README.md  requirements.txt
LazyVim/app/: config.py  main.py
LazyVim/app/agents/: briefing.py  personalizer.py  story_tracker.py  summarizer.py  translator.py
LazyVim/app/models/: schemas.py
LazyVim/app/services/: llm.py  news_fetcher.py  video_studio.py
LazyVim/frontend/: app.py
